@@ -24,6 +24,9 @@ mountall (0.2.2) UNRELEASED; urgency=low
     a local bootwait filesystem underneath a remote filesystem inherits that
     tag, remote filesystems do not inherit them.  LP: #447654.
 
+  * Replace previous hardcoded "arch specific" flag for /spu with an
+    "optional" fstab mount option.
+
  -- Steve Langasek <steve.langasek@ubuntu.com>  Sun, 11 Oct 2009 23:07:55 -0700
 
 mountall (0.2.1) karmic; urgency=low
